tests/error/comptime/pointer_difference04.bz
consteval global = 0;

function test()
{
	(consteval {
		let i = 0;
		&i - &global;
	});
}
